--- a/vesttech/public/index.html
+++ b/vesttech/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link rel="shortcut icon" href="./bitcoin.png">
+    <title>VestTech</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
