--- a/vesttech/client/public/index.html
+++ b/vesttech/client/public/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./bitcoin.png">
     <title>VestTech</title>
   </head>
-  <body>
+  <body style="background-color: #0f0e13;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
